upd gitignore and wildcard